--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                         <h2 class="text-white mt-0">about app</h2>
                         <hr class="divider divider-heavy" />
                         <p class="text-white-75 mb-4">
-                            WhoAreU???はワンタップで通話が始まります。<br>
-                            登録＆プロフィールは一切不要です。<br>
-                            ”” 当アプリは一期一会と深い関係を持たないことを目的としているため、友達登録やビデオ通話機能はございません。 ””<br><br>
-                            WhoAreU???には通話機能しかありません。<br>
-                            - 寂しい時、誰かに相談したい時、ただ誰かとおしゃべりしたい時、あなたの心の隙間に入れればなと思います。<br>
-                            - ランダムにマッチした相手と通話できます。<br><br>
-                            【機能】<br>
-                            - ブロック機能 - 嫌な相手をブロックすることができます。ブロックした相手とはマッチングすることがありません。<br>
-                            - ミュート - ボタンひとつでミュートon/off切り替えられます。<br>
-                            - 通報機能 - デベロッパーに通報できます。<br>
+                            This is an innovative random video calling app that allows users to enjoy and explore different cultures and languages around the world and make new friends.<br>
+                            WhoAreU? is an innovative random video calling app that allows users to enjoy and explore different cultures and languages around the world and make new friends and connections.<br>
+                            The app aims to break down language and cultural barriers and communicate with people from all over the world in real time.<br><br>
+                            Features:<br>
+                            Random video calls: "WhoAreU? users can enjoy random video calls with users from all over the world through "WhoAreU? It is a great opportunity to explore new friends and different cultures.<br>
+                            Multilingual Support: The app supports a variety of languages, breaking down language barriers and helping you communicate smoothly with other users. It is a great place to learn languages and hone new language skills.<br>
+                            No registration required: There is no complicated registration process to use the app. Simply download the app and enjoy easy communication anytime, anywhere.<br>
+                            Block function: It is easy to deal with unwanted people and inappropriate behavior in the app. You can block objectionable users and enjoy communicating with them in peace.<br>
+                            WhoAreU? is a platform to respect different cultures and make new friends and connections. Dive into new adventures, connect with people from all over the world, and explore different languages and cultures.<br>
+                            Translated with www.DeepL.com/Translator (free version)
                     </div>
                 </div>
             </div>
@@ -87,27 +87,27 @@
         <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-12 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="1">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="1">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50"></div>
                                 <div class="project-name">1</div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-12 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="2">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="2">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50"></div>
                                 <div class="project-name">2</div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-12 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="アプリの様子３枚目">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="アプリの様子３枚目">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50"></div>
                                 <div class="project-name">3</div>
@@ -122,63 +122,55 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">アプリ利用規約</h2>
+                        <h2 class="text-white mt-0">App Terms of Use</h2>
                         <hr class="divider divider-heavy" />
                         <p class="text-black mb-4">
-                            ア　プ　リ　利　用　規　約<br><br>
 
-                            この規約は、お客様が、「WhoAreU???」サービス（以下「本サービス」）をご利用頂く際の取扱いにつき定めるものです。本規約に同意した上で本サービスをご利用ください。<br>
-
-                            第1条（本規約への同意）<br>
-                            １　利用者は、本利用規約に同意頂いた上で、本サービスを利用できるものとします。<br>
-                            ２　利用者が、本サービスをスマートフォンその他の情報端末にダウンロードし、本規約への同意手続を行った時点で、利用者と当方との間で、本規約の諸規定に従った利用契約が成立するものとします。<br>
-                            ３　利用者が未成年者である場合には、親権者その他の法定代理人の同意を得たうえで、本サービスをご利用ください。<br>
-                            ４　未成年者の利用者が、法定代理人の同意がないにもかかわらず同意があると偽りまたは年齢について成年と偽って本サービスを利用した場合、その他行為能力者であることを信じさせるために詐術を用いた場合、本サービスに関する一切の法律行為を取り消すことは出来ません。<br>
-                            ５ 本規約の同意時に未成年であった利用者が成年に達した後に本サービスを利用した場合、当該利用者は本サービスに関する一切の法律行為を追認したものとみなされます。<br><br>
-
-                            第2条（規約の変更）<br>
-                            １　当方は、利用者の承諾を得ることなく、いつでも、本規約の内容を改定することができるものとし、利用者はこれを異議なく承諾するものとします。<br>
-                            ２　当方は、本規約を改定するときは、その内容について当方所定の方法により利用者に通知します。<br>
-                            ３　前本規約の改定の効力は、当方が前項により通知を行った時点から生じるものとします。<br>
-                            ４　利用者は、本規約変更後、本サービスを利用した時点で、変更後の本利用規約に異議なく同意したものとみなされます。<br><br>
-
-                            第3条（禁止行為）<br>
-                            本サービスの利用に際し、当方は、利用者に対し、次に掲げる行為を禁止します。当方において、利用者が禁止事項に違反したと認めた場合、利用者用の一時停止、退会処分その他当方が必要と判断した措置を取ることができます。<br> 
-
-                            （１）当方または第三者の知的財産権を侵害する行為<br>
-                            （２）当方または第三者の名誉・信用を毀損または不当に差別もしくは誹謗中傷する行為<br>
-                            （３）当方または第三者の財産を侵害する行為、または侵害する恐れのある行為 <br>
-                            （４）当方または第三者に経済的損害を与える行為<br>
-                            （５）当方または第三者に対する脅迫的な行為<br>
-                            （６）コンピューターウィルス、有害なプログラムを仕様またはそれを誘発する行為 <br>
-                            （７）本サービス用インフラ設備に対して過度な負担となるストレスをかける行為 <br>
-                            （８）当サイトのサーバーやシステム、セキュリティへの攻撃 <br>
-                            （９）当方提供のインターフェース以外の方法で当方サービスにアクセスを試みる行為<br>
-                            （１０）一人の利用者が、複数の利用者IDを取得する行為<br>
-                            （１１）上記の他、当方が不適切と判断する行為<br><br>
-
-                            第4条（免責）<br>
-                            １　当方は、本サービスの内容変更、中断、終了によって生じたいかなる損害についても、一切責任を負いません。<br>
-                            ２　当方は、利用者の本サービスの利用環境について一切関与せず、また一切の責任を負いません。<br>
-                            ３　当方は、本サービスが利用者の特定の目的に適合すること、期待する機能・商品的価値・正確性・有用性を有すること、利用者による本サービスの利用が利用者に適用のある法令または業界団体の内部規則等に適合すること、および不具合が生じないことについて、何ら保証するものではありません。<br>
-                            ４　当方は、本サービスが全ての情報端末に対応していることを保証するものではなく、本サービスの利用に供する情報端末のＯＳのバージョンアップ等に伴い、本サービスの動作に不具合が生じる可能性があることにつき、利用者はあらかじめ了承するものとします。当方は、かかる不具合が生じた場合に当方が行うプログラムの修正等により、当該不具合が解消されることを保証するものではありません。<br>
-                            ５　利用者は、AppStore、GooglePlay等のサービスストアの利用規約および運用方針の変更等に伴い、本サービスの一部又は全部の利用が制限される可能性があることをあらかじめ了承するものとします。<br>
-                            ６　当方は、本サービスを利用したことにより直接的または間接的に利用者に発生した損害について、一切賠償責任を負いません。<br>
-                            ７　当方は、利用者その他の第三者に発生した機会逸失、業務の中断その他いかなる損害（間接損害や逸失利益を含みます）に対して、当方が係る損害の可能性を事前に通知されていたとしても、一切の責任を負いません。<br>
-                            ８　第１項乃至前項の規定は、当方に故意または重過失が存する場合又は契約書が消費者契約法上の消費者に該当する場合には適用しません。<br>
-                            ９　前項が適用される場合であっても、当方は、過失（重過失を除きます。）による行為によって利用者に生じた損害のうち、特別な事情から生じた損害については、一切賠償する責任を負わないものとします。　<br>
-                            １０　本サービスの利用に関し当方が損害賠償責任を負う場合、当該損害が発生した月に利用者から受領した利用額を限度として賠償責任を負うものとします。<br>
-                            １１　利用者と他の利用者との間の紛争及びトラブルについて、当方は一切責任を負わないものとします。利用者と他の利用者でトラブルになった場合でも、両者同士の責任で解決するものとし、当方には一切の請求をしないものとします。<br>
-                            １２　利用者は、本サービスの利用に関連し、他の利用者に損害を与えた場合または第三者との間に紛争を生じた場合、自己の費用と責任において、かかる損害を賠償またはかかる紛争を解決するものとし、当方には一切の迷惑や損害を与えないものとします。<br>
-                            １３　利用者の行為により、第三者から当方が損害賠償等の請求をされた場合には、利用者の費用（弁護士費用）と責任で、これを解決するものとします。当方が、当該第三者に対して、損害賠償金を支払った場合には、利用者は、当方に対して当該損害賠償金を含む一切の費用（弁護士費用及び逸失利益を含む）を支払うものとします。<br>
-                            １４　利用者が本サービスの利用に関連して当方に損害を与えた場合、利用者の費用と責任において当方に対して損害を賠償（訴訟費用及び弁護士費用を含む）するものとします。<br><br>
-
-                            第5条（分離可能性）<br>
-                            本規約のいずれかの条項又はその一部が、消費者契約法その他の法令等により無効又は執行不能と判断された場合であっても、本規約の残りの規定及び一部が無効又は執行不能と判断された規定の残りの部分は、継続して完全に効力を有するものとします。<br><br>
-
-                            第6条（準拠法、管轄裁判所）<br>
-                            １　本規約の有効性，解釈及び履行については，日本法に準拠し，日本法に従って解釈されるものとする。<br>
-                            ２　当方と利用者等との間での論議・訴訟その他一切の紛争については、訴額に応じて、東京簡易裁判所又は東京地方裁判所を専属的合意管轄裁判所とします｡<br>
+                            These terms establish the handling of your use of the "WhoAreU???" service (hereinafter referred to as the "Service"). Please use the Service only after agreeing to these terms.<br>
+                            Article 1 (Agreement to These Terms)<br>
+                            Users can use the Service after agreeing to these Terms of Use.<br>
+                            When users download the Service on a smartphone or other information terminal and complete the agreement procedure to these terms, a usage contract in accordance with these terms is considered to be formed between the user and us.<br>
+                            If a user is a minor, please use the Service with the consent of a legal guardian or other statutory representative.<br>
+                            If a minor user uses the Service without the consent of a legal guardian, misrepresents their age or uses fraudulent means to make it appear that they have the legal capacity to act, any legal actions related to the Service cannot be revoked.<br>
+                            If a user who was a minor at the time of agreeing to these terms uses the Service after reaching the age of majority, it is considered that the user has confirmed all legal actions related to the Service.<br>
+                            Article 2 (Amendment of the Terms)<br>
+                            We reserve the right to amend the content of these terms at any time without obtaining the user's consent, and the user agrees to these changes without objection.<br>
+                            We will notify users of changes to these terms through our designated methods.<br>
+                            The revised terms shall take effect from the time we notify users, as per the preceding paragraph.<br>
+                            Users are considered to have accepted the amended Terms of Use without objection when they use the Service after the changes to the terms have been made.<br>
+                            Article 3 (Prohibited Actions)<br>
+                            When using the Service, the following actions are prohibited, and if a user violates these prohibitions according to our judgment, we may take measures, including temporary suspension or termination of the user's account:<br>
+                            (1) Actions that infringe upon our or a third party's intellectual property rights.<br>
+                            (2) Actions that defame or unfairly discriminate or slander our or a third party's reputation.<br>
+                            (3) Actions that infringe upon or pose a risk of infringing upon our or a third party's property.<br>
+                            (4) Actions that cause economic harm to us or a third party.<br>
+                            (5) Threatening actions against us or a third party.<br>
+                            (6) Actions that use or induce computer viruses or harmful programs.<br>
+                            (7) Actions that excessively stress the infrastructure of the Service.<br>
+                            (8) Attacks on our site's servers, systems, or security.<br>
+                            (9) Attempts to access our service by methods other than the interfaces we provide.<br>
+                            (10) Acquiring multiple user IDs by a single user.<br>
+                            (11) Other actions deemed inappropriate by us.<br>
+                            Article 4 (Disclaimer)<br>
+                            We are not responsible for any damages caused by changes, interruptions, or termination of the Service.<br>
+                            We are not involved in the user's usage environment for the Service and do not assume any responsibility.<br>
+                            We do not guarantee that the Service will meet the user's specific purposes, expectations of features, product value, accuracy, usefulness, compliance with applicable laws or industry regulations, or that it will be free from defects.<br>
+                            We do not guarantee that the Service is compatible with all information terminals. Users acknowledge that updates to the operating system of information terminals used for the Service may cause operational issues.<br>
+                            Users are advised that the use of the Service may be restricted in part or in full due to changes in the terms of use or operating policies of service stores such as the App Store or Google Play.<br>
+                            We are not liable for any direct or indirect damages caused to users through the use of the Service.<br>
+                            We are not liable for opportunity losses, business interruptions, or any other damages (including indirect damages or lost profits) arising from disputes or troubles between users or between users and third parties, even if the possibility of such damages was notified in advance.<br>
+                            The provisions in Paragraphs 1 through the previous paragraph shall not apply if we have intentional or gross negligence, or if the agreement falls under consumer contract law as a consumer.<br>
+                            Even in cases where the previous paragraph applies, we are not liable for damages resulting from users' actions, excluding damages caused by special circumstances resulting from negligence (excluding gross negligence).<br>
+                            If we are held liable for damages related to the use of the Service, our liability is limited to the usage fees received from the user in the month in which the damages occurred.<br>
+                            In the event of disputes and troubles between users or between users and third parties, we assume no responsibility. Users are expected to resolve such issues themselves, and no claims should be made against us.<br>
+                            Users are responsible for compensating for damages caused to others in connection with the use of the Service or disputes with third parties at their own expense and responsibility, and shall not cause us any inconvenience or damages.<br>
+                            In cases where we are claimed for damages or compensation by a third party due to the actions of the user, the user shall resolve the matter at their own expense and responsibility, including legal fees. If we make a payment to the third party for damages, the user shall reimburse us for all costs, including legal fees and lost profits.<br>
+                            If a user causes damages to us in connection with the use of the Service, the user shall compensate us for the damages (including legal costs and attorney fees) at their own expense and responsibility.<br>
+                            Article 5 (Severability)<br>
+                            If any provision or part of any provision of these terms is determined to be invalid or unenforceable under consumer contract law or other laws and regulations, the remaining provisions of these terms and the remaining parts of the provisions that have been determined to be invalid or unenforceable shall remain in full force and effect.<br>
+                            Article 6 (Governing Law and Jurisdiction)<br>
+                            The validity, interpretation, and performance of these terms shall be governed by Japanese law and interpreted in accordance with Japanese law.<br>
+                            For any discussions, lawsuits, or disputes between us and users, etc., the Tokyo Summary Court or the Tokyo District Court shall be the exclusive jurisdictional court based on the amount of the lawsuit.<br>
                     </div>
                 </div>
             </div>
@@ -193,7 +185,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">WhoAreU???Info@gmail.com</div>
+                                <div class="small text-black-50">WhoAreUInfo@gmail.com</div>
                             </div>
                         </div>
                     </div>
