--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#download">Download</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#explanation">about app</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">image</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#explanation">About App</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Image</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#agreement">App Terms of Use</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#policy">Privacy Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -170,6 +172,38 @@
                             Article 6 (Governing Law and Jurisdiction)<br>
                             The validity, interpretation, and performance of these terms shall be governed by Japanese law and interpreted in accordance with Japanese law.<br>
                             For any discussions, lawsuits, or disputes between us and users, etc., the Tokyo Summary Court or the Tokyo District Court shall be the exclusive jurisdictional court based on the amount of the lawsuit.<br>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- policy-->
+        <section class="page-section policy" id="policy">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-black mt-0">Privacy Policy</h2>
+                        <hr class="divider divider-heavy" />
+                        <p class="text-black mb-4">
+                            This Privacy Policy provides information about how [WhoAreU???] handles data collected by us. By using our app, you are considered to agree to this policy.<br>
+                            Data Collection<br>
+                            Our app may collect the following data:<br>
+                            Data Usage<br>
+                            The collected data may be used for the following purposes:<br>
+                            Providing and improving the app<br>
+                            Customizing user experiences<br>
+                            Displaying and personalizing advertisements<br>
+                            Analyzing and creating statistical information for the app<br>
+                            Data Sharing<br>
+                            Collected data may be shared with third parties in the following cases:<br>
+                            Advertising partners or advertising networks<br>
+                            In response to legal requirements<br>
+                            Security<br>
+                            We take measures to ensure the security of data. Access to data is restricted, and data is properly protected.<br>
+                            User Rights<br>
+                            Users have the right to access their data, request data modifications, deletions, or restrictions on data processing. For any requests regarding this, please contact us at [Contact Information].<br>
+                            Cookies and Tracking Technologies<br>
+                            Our app may use cookies and tracking technologies. Users can control these technologies through settings.<br>
+                            For any privacy-related questions or concerns, please contact us at [WhoAreUInfo@gmail.com].<br>
                     </div>
                 </div>
             </div>
