--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <h3 class="h4 mb-2 text-white">iOS</h3>
-                            <div class="mb-5"><a class="btn btn-primary btn-xl" href="">download</a></div>
+                            <div class="mb-5"><a class="btn btn-primary btn-xl" href="https://apps.apple.com/jp/app/whoareu/id6469033245">download</a></div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <h3 class="h4 mb-2 text-white">Android</h3>
-                            <div class="mb-5"><a class="btn btn-primary btn-xl" href="">download</a></div>
+                            <div class="mb-5"><a class="btn btn-primary btn-xl" href="https://play.google.com/store/apps/details?id=com.gmail.mmakt122.whoareu">download</a></div>
                         </div>
                     </div>
                 </div>
